src/ecolang.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root, factory) {
  if (typeof define === "function" && define.amd) {
    define([], factory);
  } else if (typeof module === "object" && module.exports) {
    module.exports = factory();
  }
})(this, function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Lenguaje: peg$parseLenguaje },
        peg$startRuleFunction  = peg$parseLenguaje,

        peg$c0 = function(sentencias) {return transformOutput(sentencias)},
        peg$c1 = function(sentencia) {return sentencia},
        peg$c2 = "#",
        peg$c3 = peg$literalExpectation("#", false),
        peg$c4 = function(comentario) {return {tipo:"comentario", comentario}},
        peg$c5 = "\xBFse puede obtener ",
        peg$c6 = peg$literalExpectation("\xBFse puede obtener ", false),
        peg$c7 = "\xBFSe puede obtener ",
        peg$c8 = peg$literalExpectation("\xBFSe puede obtener ", false),
        peg$c9 = "\xBFse pueden obtener ",
        peg$c10 = peg$literalExpectation("\xBFse pueden obtener ", false),
        peg$c11 = "\xBFSe pueden obtener ",
        peg$c12 = peg$literalExpectation("\xBFSe pueden obtener ", false),
        peg$c13 = "?",
        peg$c14 = peg$literalExpectation("?", false),
        peg$c15 = function(recurso) {return {tipo: "cuestion sobre obtención", ...recurso}},
        peg$c16 = "\xBFqu\xE9 se necesita para obtener ",
        peg$c17 = peg$literalExpectation("\xBFqu\xE9 se necesita para obtener ", false),
        peg$c18 = "\xBFQu\xE9 se necesita para obtener ",
        peg$c19 = peg$literalExpectation("\xBFQu\xE9 se necesita para obtener ", false),
        peg$c20 = function(recurso) {return {tipo: "cuestión sobre requisitos", ...recurso}},
        peg$c21 = "para obtener ",
        peg$c22 = peg$literalExpectation("para obtener ", false),
        peg$c23 = "Para obtener ",
        peg$c24 = peg$literalExpectation("Para obtener ", false),
        peg$c25 = function(recurso) {return onlyNotNullProperties(recurso)},
        peg$c26 = "hay ",
        peg$c27 = peg$literalExpectation("hay ", false),
        peg$c28 = "Hay ",
        peg$c29 = peg$literalExpectation("Hay ", false),
        peg$c30 = function(cantidad, existencia) {return {tipo: "existencia", ...cantidad, existencia}},
        peg$c31 = function(cantidad, recurso, metodos) {return onlyNotNullProperties({tipo: "recurso", recurso, ...cantidad, metodos})},
        peg$c32 = function(porcentaje, recurso) {return onlyNotNullProperties({porcentaje, ...recurso })},
        peg$c33 = function(cantidad, recurso) {return onlyNotNullProperties({ ...cantidad, recurso })},
        peg$c34 = "por la v\xEDa ",
        peg$c35 = peg$literalExpectation("por la v\xEDa ", false),
        peg$c36 = "por el m\xE9todo ",
        peg$c37 = peg$literalExpectation("por el m\xE9todo ", false),
        peg$c38 = function(metodo, propiedades) {return onlyNotNullProperties({metodo, ...propiedades})},
        peg$c39 = function(requisitos, caracteristicas) {return {requisitos, caracteristicas}},
        peg$c40 = "se caracterizan por",
        peg$c41 = peg$literalExpectation("se caracterizan por", false),
        peg$c42 = "se caracteriza por",
        peg$c43 = peg$literalExpectation("se caracteriza por", false),
        peg$c44 = function(necesidades) {return necesidades},
        peg$c45 = "se necesitan de",
        peg$c46 = peg$literalExpectation("se necesitan de", false),
        peg$c47 = "se necesita de",
        peg$c48 = peg$literalExpectation("se necesita de", false),
        peg$c49 = function(recurso) {return recurso},
        peg$c50 = function(caracteristica) {return caracteristica},
        peg$c51 = function(numero, magnitud) {return onlyNotNullProperties({numero, magnitud})},
        peg$c52 = "de",
        peg$c53 = peg$literalExpectation("de", false),
        peg$c54 = function(magnitud) {return magnitud},
        peg$c55 = function() {return text()},
        peg$c56 = "yotta",
        peg$c57 = peg$literalExpectation("yotta", false),
        peg$c58 = "zetta",
        peg$c59 = peg$literalExpectation("zetta", false),
        peg$c60 = "exa",
        peg$c61 = peg$literalExpectation("exa", false),
        peg$c62 = "peta",
        peg$c63 = peg$literalExpectation("peta", false),
        peg$c64 = "tera",
        peg$c65 = peg$literalExpectation("tera", false),
        peg$c66 = "giga",
        peg$c67 = peg$literalExpectation("giga", false),
        peg$c68 = "mega",
        peg$c69 = peg$literalExpectation("mega", false),
        peg$c70 = "kilo",
        peg$c71 = peg$literalExpectation("kilo", false),
        peg$c72 = "hecto",
        peg$c73 = peg$literalExpectation("hecto", false),
        peg$c74 = "deca",
        peg$c75 = peg$literalExpectation("deca", false),
        peg$c76 = "deci",
        peg$c77 = peg$literalExpectation("deci", false),
        peg$c78 = "centi",
        peg$c79 = peg$literalExpectation("centi", false),
        peg$c80 = "mili",
        peg$c81 = peg$literalExpectation("mili", false),
        peg$c82 = "micro",
        peg$c83 = peg$literalExpectation("micro", false),
        peg$c84 = "nano",
        peg$c85 = peg$literalExpectation("nano", false),
        peg$c86 = "pico",
        peg$c87 = peg$literalExpectation("pico", false),
        peg$c88 = "femto",
        peg$c89 = peg$literalExpectation("femto", false),
        peg$c90 = "atto",
        peg$c91 = peg$literalExpectation("atto", false),
        peg$c92 = "zepto",
        peg$c93 = peg$literalExpectation("zepto", false),
        peg$c94 = "yocto",
        peg$c95 = peg$literalExpectation("yocto", false),
        peg$c96 = "unidades",
        peg$c97 = peg$literalExpectation("unidades", false),
        peg$c98 = "unidad",
        peg$c99 = peg$literalExpectation("unidad", false),
        peg$c100 = "gramos",
        peg$c101 = peg$literalExpectation("gramos", false),
        peg$c102 = "gramo",
        peg$c103 = peg$literalExpectation("gramo", false),
        peg$c104 = "toneladas",
        peg$c105 = peg$literalExpectation("toneladas", false),
        peg$c106 = "tonelada",
        peg$c107 = peg$literalExpectation("tonelada", false),
        peg$c108 = "litros",
        peg$c109 = peg$literalExpectation("litros", false),
        peg$c110 = "litro",
        peg$c111 = peg$literalExpectation("litro", false),
        peg$c112 = "\xE1reas",
        peg$c113 = peg$literalExpectation("\xE1reas", false),
        peg$c114 = "\xE1rea",
        peg$c115 = peg$literalExpectation("\xE1rea", false),
        peg$c116 = "hect\xE1reas",
        peg$c117 = peg$literalExpectation("hect\xE1reas", false),
        peg$c118 = "hect\xE1rea",
        peg$c119 = peg$literalExpectation("hect\xE1rea", false),
        peg$c120 = "grados sexagesimales",
        peg$c121 = peg$literalExpectation("grados sexagesimales", false),
        peg$c122 = "grado sexagesimal",
        peg$c123 = peg$literalExpectation("grado sexagesimal", false),
        peg$c124 = "minutos de arco",
        peg$c125 = peg$literalExpectation("minutos de arco", false),
        peg$c126 = "minuto de arco",
        peg$c127 = peg$literalExpectation("minuto de arco", false),
        peg$c128 = "segundos de arco",
        peg$c129 = peg$literalExpectation("segundos de arco", false),
        peg$c130 = "segundo de arco",
        peg$c131 = peg$literalExpectation("segundo de arco", false),
        peg$c132 = "minutos",
        peg$c133 = peg$literalExpectation("minutos", false),
        peg$c134 = "minuto",
        peg$c135 = peg$literalExpectation("minuto", false),
        peg$c136 = "horas",
        peg$c137 = peg$literalExpectation("horas", false),
        peg$c138 = "hora",
        peg$c139 = peg$literalExpectation("hora", false),
        peg$c140 = "d\xEDas",
        peg$c141 = peg$literalExpectation("d\xEDas", false),
        peg$c142 = "d\xEDa",
        peg$c143 = peg$literalExpectation("d\xEDa", false),
        peg$c144 = "semanas",
        peg$c145 = peg$literalExpectation("semanas", false),
        peg$c146 = "semana",
        peg$c147 = peg$literalExpectation("semana", false),
        peg$c148 = "meses",
        peg$c149 = peg$literalExpectation("meses", false),
        peg$c150 = "mes",
        peg$c151 = peg$literalExpectation("mes", false),
        peg$c152 = "a\xF1os",
        peg$c153 = peg$literalExpectation("a\xF1os", false),
        peg$c154 = "a\xF1o",
        peg$c155 = peg$literalExpectation("a\xF1o", false),
        peg$c156 = "lustros",
        peg$c157 = peg$literalExpectation("lustros", false),
        peg$c158 = "lustro",
        peg$c159 = peg$literalExpectation("lustro", false),
        peg$c160 = "d\xE9cadas",
        peg$c161 = peg$literalExpectation("d\xE9cadas", false),
        peg$c162 = "d\xE9cada",
        peg$c163 = peg$literalExpectation("d\xE9cada", false),
        peg$c164 = "siglos",
        peg$c165 = peg$literalExpectation("siglos", false),
        peg$c166 = "siglo",
        peg$c167 = peg$literalExpectation("siglo", false),
        peg$c168 = "milenios",
        peg$c169 = peg$literalExpectation("milenios", false),
        peg$c170 = "milenio",
        peg$c171 = peg$literalExpectation("milenio", false),
        peg$c172 = "metros c\xFAbicos",
        peg$c173 = peg$literalExpectation("metros c\xFAbicos", false),
        peg$c174 = "metro c\xFAbico",
        peg$c175 = peg$literalExpectation("metro c\xFAbico", false),
        peg$c176 = "metros cuadrados",
        peg$c177 = peg$literalExpectation("metros cuadrados", false),
        peg$c178 = "metro cuadrado",
        peg$c179 = peg$literalExpectation("metro cuadrado", false),
        peg$c180 = "metros",
        peg$c181 = peg$literalExpectation("metros", false),
        peg$c182 = "metro",
        peg$c183 = peg$literalExpectation("metro", false),
        peg$c184 = "kilogramonotas",
        peg$c185 = peg$literalExpectation("kilogramonotas", false),
        peg$c186 = "kilogramonota",
        peg$c187 = peg$literalExpectation("kilogramonota", false),
        peg$c188 = "amperios",
        peg$c189 = peg$literalExpectation("amperios", false),
        peg$c190 = "amperio",
        peg$c191 = peg$literalExpectation("amperio", false),
        peg$c192 = "kelvins",
        peg$c193 = peg$literalExpectation("kelvins", false),
        peg$c194 = "kelvin",
        peg$c195 = peg$literalExpectation("kelvin", false),
        peg$c196 = "mols",
        peg$c197 = peg$literalExpectation("mols", false),
        peg$c198 = "mol",
        peg$c199 = peg$literalExpectation("mol", false),
        peg$c200 = "candelas",
        peg$c201 = peg$literalExpectation("candelas", false),
        peg$c202 = "candela",
        peg$c203 = peg$literalExpectation("candela", false),
        peg$c204 = "hercios",
        peg$c205 = peg$literalExpectation("hercios", false),
        peg$c206 = "hercio",
        peg$c207 = peg$literalExpectation("hercio", false),
        peg$c208 = "newtons",
        peg$c209 = peg$literalExpectation("newtons", false),
        peg$c210 = "newton",
        peg$c211 = peg$literalExpectation("newton", false),
        peg$c212 = "pascals",
        peg$c213 = peg$literalExpectation("pascals", false),
        peg$c214 = "pascal",
        peg$c215 = peg$literalExpectation("pascal", false),
        peg$c216 = "julios",
        peg$c217 = peg$literalExpectation("julios", false),
        peg$c218 = "julio",
        peg$c219 = peg$literalExpectation("julio", false),
        peg$c220 = "vatios",
        peg$c221 = peg$literalExpectation("vatios", false),
        peg$c222 = "vatio",
        peg$c223 = peg$literalExpectation("vatio", false),
        peg$c224 = "culombios",
        peg$c225 = peg$literalExpectation("culombios", false),
        peg$c226 = "culombio",
        peg$c227 = peg$literalExpectation("culombio", false),
        peg$c228 = "voltios",
        peg$c229 = peg$literalExpectation("voltios", false),
        peg$c230 = "voltio",
        peg$c231 = peg$literalExpectation("voltio", false),
        peg$c232 = "faradios",
        peg$c233 = peg$literalExpectation("faradios", false),
        peg$c234 = "faradio",
        peg$c235 = peg$literalExpectation("faradio", false),
        peg$c236 = "ohmios",
        peg$c237 = peg$literalExpectation("ohmios", false),
        peg$c238 = "ohmio",
        peg$c239 = peg$literalExpectation("ohmio", false),
        peg$c240 = "siemens",
        peg$c241 = peg$literalExpectation("siemens", false),
        peg$c242 = "webers",
        peg$c243 = peg$literalExpectation("webers", false),
        peg$c244 = "weber",
        peg$c245 = peg$literalExpectation("weber", false),
        peg$c246 = "teslas",
        peg$c247 = peg$literalExpectation("teslas", false),
        peg$c248 = "tesla",
        peg$c249 = peg$literalExpectation("tesla", false),
        peg$c250 = "henrios",
        peg$c251 = peg$literalExpectation("henrios", false),
        peg$c252 = "henrio",
        peg$c253 = peg$literalExpectation("henrio", false),
        peg$c254 = "grados Celsius",
        peg$c255 = peg$literalExpectation("grados Celsius", false),
        peg$c256 = "grado Celsius",
        peg$c257 = peg$literalExpectation("grado Celsius", false),
        peg$c258 = "grados Farenheit",
        peg$c259 = peg$literalExpectation("grados Farenheit", false),
        peg$c260 = "grado Farenheit",
        peg$c261 = peg$literalExpectation("grado Farenheit", false),
        peg$c262 = "grados Kelvin",
        peg$c263 = peg$literalExpectation("grados Kelvin", false),
        peg$c264 = "grado Kelvin",
        peg$c265 = peg$literalExpectation("grado Kelvin", false),
        peg$c266 = "katals",
        peg$c267 = peg$literalExpectation("katals", false),
        peg$c268 = "katal",
        peg$c269 = peg$literalExpectation("katal", false),
        peg$c270 = "becquerels",
        peg$c271 = peg$literalExpectation("becquerels", false),
        peg$c272 = "becquerel",
        peg$c273 = peg$literalExpectation("becquerel", false),
        peg$c274 = "grays",
        peg$c275 = peg$literalExpectation("grays", false),
        peg$c276 = "gray",
        peg$c277 = peg$literalExpectation("gray", false),
        peg$c278 = "sieverts",
        peg$c279 = peg$literalExpectation("sieverts", false),
        peg$c280 = "sievert",
        peg$c281 = peg$literalExpectation("sievert", false),
        peg$c282 = "lumens",
        peg$c283 = peg$literalExpectation("lumens", false),
        peg$c284 = "lumen",
        peg$c285 = peg$literalExpectation("lumen", false),
        peg$c286 = "luxs",
        peg$c287 = peg$literalExpectation("luxs", false),
        peg$c288 = "lux",
        peg$c289 = peg$literalExpectation("lux", false),
        peg$c290 = "%",
        peg$c291 = peg$literalExpectation("%", false),
        peg$c292 = function(porcentaje) {return porcentaje},
        peg$c293 = " de ",
        peg$c294 = peg$literalExpectation(" de ", false),
        peg$c295 = /^[^\n]/,
        peg$c296 = peg$classExpectation(["\n"], true, false),
        peg$c297 = function() {return text().trim()},
        peg$c298 = /^[^\n?]/,
        peg$c299 = peg$classExpectation(["\n", "?"], true, false),
        peg$c300 = /^[0-9]/,
        peg$c301 = peg$classExpectation([["0", "9"]], false, false),
        peg$c302 = ".",
        peg$c303 = peg$literalExpectation(".", false),
        peg$c304 = ",",
        peg$c305 = peg$literalExpectation(",", false),
        peg$c306 = "'",
        peg$c307 = peg$literalExpectation("'", false),
        peg$c308 = function() {return fromTextToNumber(text())},
        peg$c309 = " ",
        peg$c310 = peg$literalExpectation(" ", false),
        peg$c311 = /^[\r\n\t ]/,
        peg$c312 = peg$classExpectation(["\r", "\n", "\t", " "], false, false),
        peg$c313 = "\r\n",
        peg$c314 = peg$literalExpectation("\r\n", false),
        peg$c315 = "\n\r",
        peg$c316 = peg$literalExpectation("\n\r", false),
        peg$c317 = "\n",
        peg$c318 = peg$literalExpectation("\n", false),
        peg$c319 = peg$anyExpectation(),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseLenguaje() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse__();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse__();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSentencias();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parse__();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parse__();
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSentencias() {
      var s0, s1;

      s0 = [];
      s1 = peg$parseSentencia_completa();
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseSentencia_completa();
      }

      return s0;
    }

    function peg$parseSentencia_completa() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseNucleo_de_sentencia();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseEOL();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parseEOL();
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = peg$parseEOF();
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseNucleo_de_sentencia() {
      var s0;

      s0 = peg$parseDefinicion_de_recurso();
      if (s0 === peg$FAILED) {
        s0 = peg$parseDefinicion_de_existencias();
        if (s0 === peg$FAILED) {
          s0 = peg$parseComentario();
          if (s0 === peg$FAILED) {
            s0 = peg$parseCuestion();
          }
        }
      }

      return s0;
    }

    function peg$parseComentario() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 35) {
        s1 = peg$c2;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseResto_de_linea();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c4(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseCuestion() {
      var s0;

      s0 = peg$parseCuestion_sobre_necesidad();
      if (s0 === peg$FAILED) {
        s0 = peg$parseCuestion_sobre_posibilidad();
      }

      return s0;
    }

    function peg$parseCuestion_sobre_posibilidad() {
      var s0, s1, s2, s3;
